fix issue where hiding the menu on narrow viewports remains hidden on wider viewports

--- a/source/stylesheets/sidebar.less
+++ b/source/stylesheets/sidebar.less
@@ -71,6 +71,10 @@
             } //ul.sub li
         } //ul.sub
 
+        @media screen and (min-width: 768px) {
+            display: block !important;
+        } //@media 768px
+
     } //ul
 
 
